@startuml
set namespaceSeparator ::

class "super_lista::blocs::lista_de_compra_form.dart::ListaDeCompraForm" {
  +dynamic Function(ListaDeCompra, String?, DateTime?) onSubmit
  +ListaDeCompra? listaDeCompra
  +State<ListaDeCompraForm> createState()
}

class "super_lista::blocs::lista_de_compra_form.dart::_ListaDeCompraFormState" {
  -TextEditingController _tituloController
  -DateTime? _selectedDate
  +void initState()
  -dynamic _showDatePicker()
  -dynamic _submitForm()
  +Widget build()
}


class "super_lista::blocs::lista_de_compra_item_form.dart::ListaDeCompraItemForm" {
  +ListaDeCompraItem listaDeCompraItem
  +dynamic Function(String, int, double, ListaDeCompraItem) onSubmit
  +State<ListaDeCompraItemForm> createState()
}

"super_lista::blocs::lista_de_compra_item_form.dart::ListaDeCompraItemForm" o-- "super_lista::models::lista_de_compra_item.dart::ListaDeCompraItem"

class "super_lista::blocs::lista_de_compra_item_form.dart::_ListaDeCompraItemFormState" {
  -TextEditingController _tituloController
  -TextEditingController _quantidadeController
  -TextEditingController _valorUnidadeController
  -TextEditingController _valorTotalController
  -dynamic _sum()
  -dynamic _sincronizarValorTotal()
  -dynamic _sincronizarValorUnidade()
  +void initState()
  -dynamic _submitForm()
  +Widget build()
}


class "super_lista::blocs::valor_estimado.dart::ValorEstimado" {
  +List<ListaDeCompraItem>? itens
  +TextStyle? textStyle
  +Color? progressBgColor
  +Color? progressBarColor
  +double? fontSize
  +Widget build()


class "super_lista::main.dart::MyApp" {
  +Widget build()
  -ThemeData _themeDataSuperLista()
}


class "super_lista::models::lista_de_compra.dart::ListaDeCompra" {
  +String? id
  +String userId
  +DateTime? data
  +String? titulo
  {static} -CollectionReference<ListaDeCompra> _collectionRef
  +Map<String, dynamic> toFirestore()
  {static} +Stream<DocumentSnapshot<ListaDeCompra>> find()
  {static} +Stream<QuerySnapshot<ListaDeCompra>> all()
  +ListaDeCompra save()
  +Stream<QuerySnapshot<ListaDeCompraItem>>? itens()
  +void delete()
}

class "super_lista::models::lista_de_compra_item.dart::ListaDeCompraItem" {
  +String? titulo
  +String? id
  +String listaDeCompraId
  +bool isConcluido
  +DateTime? concluidoEm
  +DateTime criadoEm
  +int quantidade
  +double? valorTotal
  +double? valorUnidade
  {static} -CollectionReference<ListaDeCompraItem> _collectionRef
  +Map<String, dynamic> toFirestore()
  +Stream<DocumentSnapshot<ListaDeCompraItem>> find()
  {static} +Stream<QuerySnapshot<ListaDeCompraItem>> all()
  +ListaDeCompraItem setConcluido()
  +ListaDeCompraItem save()
  +void delete()
}




class "super_lista::providers::auth.dart::Auth" {
  -UserCredential? _userCredential
  -User? _user
  -String? _id
  {static} +AuthState state
  {static} -Auth? _instance
  {static} -Auth _getInstance()
  {static} +String id()
  {static} +dynamic user()
  {static} +dynamic ensureInitialized()
}

"super_lista::providers::auth.dart::Auth" o-- "super_lista::providers::auth.dart::AuthState"
"super_lista::providers::auth.dart::Auth" o-- "super_lista::providers::auth.dart::Auth"

class "super_lista::providers::auth.dart::AuthState" {
  +int index
  {static} +List<AuthState> values
  {static} +AuthState loading
  {static} +AuthState signed
  {static} +AuthState notSigned
}

"super_lista::providers::auth.dart::AuthState" o-- "super_lista::providers::auth.dart::AuthState"

class "super_lista::screens::home_screen.dart::Home" {
  +State<Home> createState()
}


class "super_lista::screens::home_screen.dart::_HomeState" {
  +AvaliableScreen screen
  +SampleItem? selectedItem
  +int hoje
  -dynamic _onListaDeCompraFormSubmit()
  -dynamic _showModalFormLista()
  +Widget build()
  +StreamBuilder<QuerySnapshot<ListaDeCompra>> streamDeListas()
  -ListTile _listaTile()
}

"super_lista::screens::home_screen.dart::_HomeState" o-- "super_lista::utils::avaliable_screen.dart::AvaliableScreen"
"super_lista::screens::home_screen.dart::_HomeState" o-- "super_lista::screens::home_screen.dart::SampleItem"

class "super_lista::screens::home_screen.dart::SampleItem" {
  +int index
  {static} +List<SampleItem> values
  {static} +SampleItem itemOne
  {static} +SampleItem itemTwo
  {static} +SampleItem itemThree
}

"super_lista::screens::home_screen.dart::SampleItem" o-- "super_lista::screens::home_screen.dart::SampleItem"

class "super_lista::screens::lista_compra_itens_screen.dart::ListaDeCompraItensScreen" {
  +ListaDeCompra listaDeCompra
  +State<ListaDeCompraItensScreen> createState()
}

"super_lista::screens::lista_compra_itens_screen.dart::ListaDeCompraItensScreen" o-- "super_lista::models::lista_de_compra.dart::ListaDeCompra"

class "super_lista::screens::lista_compra_itens_screen.dart::_ListaDeCompraItensScreenState" {
  +double valorPorcentagem
  +double montanteConcluido
  +double montanteTotal
  +AvaliableScreen screen
  -void _showModalFormItem()
  -void _addItem()
  -dynamic _onItemSubmit()
  +Widget build()
  -Widget _titulo()
  -Widget _itens()
  -Widget _itensListView()
  +Container secondaryBackgroundDismissible()
  +Container primaryBackgroundDismissible()
}

"super_lista::screens::lista_compra_itens_screen.dart::_ListaDeCompraItensScreenState" o-- "super_lista::utils::avaliable_screen.dart::AvaliableScreen"

class "super_lista::utils::avaliable_screen.dart::AvaliableScreen" {
  +double screenHeight
  +double screenWidth
  +double offsetTop
  +double offsetBottom
  +double offsetLeft
  +double offsetRight
  +double vh()
  +double vw()
}

class "super_lista::utils::colors.dart::ColorsSl" {
  {static} +Color primary
  {static} +Color secondary
  {static} +Color defaultC
  {static} +Color defaultC05
  {static} +Color textBody
  {static} +Color textBodySecondary
  {static} +Color titleBodySecondary
}


class "super_lista::utils::currency_input_formatter.dart::CurrencyInputFormatter" {
  {static} -NumberFormat _currencyFormat
  +TextEditingValue formatEditUpdate()
  {static} +double? unformat()
  {static} +String format()
}

class "super_lista::utils::date_format.dart::DateFormatSl" {
  -DateFormat _formatter
  +dynamic format()
}


class "super_lista::utils::number_format.dart::NumberformatSl" {
  {static} +dynamic format()
}


@enduml